--- a/PT-Project.vcxproj
+++ b/PT-Project.vcxproj
@@ -135,6 +135,8 @@
     <ClCompile Include="Actions\AddTriAction.cpp" />
     <ClCompile Include="Actions\ClearAction.cpp" />
     <ClCompile Include="Actions\ExitAction.cpp" />
+    <ClCompile Include="Actions\ChangeDrawColor.cpp" />
+    <ClCompile Include="Actions\ChangeFillColor.cpp" />
     <ClCompile Include="CMUgraphicsLib\auxil.cpp" />
     <ClCompile Include="CMUgraphicsLib\CMUgraphics.cpp" />
     <ClCompile Include="CMUgraphicsLib\colors.cpp" />
@@ -171,6 +173,9 @@
     <ClCompile Include="CMUgraphicsLib\jpeg\jquant1.c" />
     <ClCompile Include="CMUgraphicsLib\jpeg\jquant2.c" />
     <ClCompile Include="CMUgraphicsLib\jpeg\jutils.c" />
+    <ClCompile Include="Actions\copyAction.cpp" />
+    <ClCompile Include="Actions\cutAction.cpp" />
+    <ClCompile Include="Actions\deleteAction.cpp" />
     <ClCompile Include="Figures\CEllipse.cpp" />
     <ClCompile Include="Figures\CFigure.cpp" />
     <ClCompile Include="Figures\CLine.cpp" />
@@ -181,7 +186,12 @@
     <ClCompile Include="GUI\Input.cpp" />
     <ClCompile Include="GUI\Output.cpp" />
     <ClCompile Include="ApplicationManager.cpp" />
+    <ClCompile Include="Actions\loadAction.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Actions\pasteAction.cpp" />
+    <ClCompile Include="Actions\saveAction.cpp" />
+    <ClCompile Include="Actions\saveByTypeAction.cpp" />
+    <ClCompile Include="Actions\selectShapeAction.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actions\AddElpsAction.h" />
@@ -190,6 +200,8 @@
     <ClInclude Include="Actions\AddTriAction.h" />
     <ClInclude Include="Actions\ExitAction.h" />
     <ClInclude Include="Actions\ClearAction.h" />
+    <ClInclude Include="Actions\ChangeDrawColor.h" />
+    <ClInclude Include="Actions\ChangeFillColor.h" />
     <ClInclude Include="CMUgraphicsLib\auxil.h" />
     <ClInclude Include="CMUgraphicsLib\CMUgraphics.h" />
     <ClInclude Include="CMUgraphicsLib\colors.h" />
@@ -210,6 +222,9 @@
     <ClInclude Include="CMUgraphicsLib\jpeg\jpegint.h" />
     <ClInclude Include="CMUgraphicsLib\jpeg\jpeglib.h" />
     <ClInclude Include="CMUgraphicsLib\jpeg\jversion.h" />
+    <ClInclude Include="Actions\copyAction.h" />
+    <ClInclude Include="Actions\cutAction.h" />
+    <ClInclude Include="Actions\deleteAction.h" />
     <ClInclude Include="Figures\CEllipse.h" />
     <ClInclude Include="Figures\CFigure.h" />
     <ClInclude Include="Figures\CLine.h" />
@@ -223,6 +238,11 @@
     <ClInclude Include="GUI\UI_Info.h" />
     <ClInclude Include="ApplicationManager.h" />
     <ClInclude Include="DEFS.h" />
+    <ClInclude Include="Actions\loadAction.h" />
+    <ClInclude Include="Actions\pasteAction.h" />
+    <ClInclude Include="Actions\saveAction.h" />
+    <ClInclude Include="Actions\saveByTypeAction.h" />
+    <ClInclude Include="Actions\selectShapeAction.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
