--- a/PT-Project.vcxproj.filters
+++ b/PT-Project.vcxproj.filters
@@ -208,6 +208,9 @@
     <ClCompile Include="Actions\ChangeFillColor.cpp">
       <Filter>Action Classes</Filter>
     </ClCompile>
+    <ClCompile Include="Actions\ByShapeAction.cpp">
+      <Filter>Action Classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CMUgraphicsLib\auxil.h">
@@ -353,6 +356,9 @@
       <Filter>Action Classes</Filter>
     </ClInclude>
     <ClInclude Include="Actions\cutAction.h">
+      <Filter>Action Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="Actions\ByShapeAction.h">
       <Filter>Action Classes</Filter>
     </ClInclude>
   </ItemGroup>
