--- a/PT-Project.vcxproj.filters
+++ b/PT-Project.vcxproj.filters
@@ -211,6 +211,7 @@
     <ClCompile Include="Actions\ByShapeAction.cpp">
       <Filter>Action Classes</Filter>
     </ClCompile>
+    <ClCompile Include="Utility.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CMUgraphicsLib\auxil.h">
