PLEASE FIX SELECTSIZE

--- a/PT-Project.vcxproj.filters
+++ b/PT-Project.vcxproj.filters
@@ -221,6 +221,9 @@
     <ClCompile Include="Actions\selectShapeAction.cpp">
       <Filter>Action Classes</Filter>
     </ClCompile>
+    <ClCompile Include="Actions\ResizeAction.cpp">
+      <Filter>Action Classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CMUgraphicsLib\auxil.h">
@@ -378,6 +381,9 @@
       <Filter>Action Classes</Filter>
     </ClInclude>
     <ClInclude Include="Actions\sendToBackAction.h">
+      <Filter>Action Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="Actions\ResizeAction.h">
       <Filter>Action Classes</Filter>
     </ClInclude>
   </ItemGroup>
