--- a/PT-Project.vcxproj
+++ b/PT-Project.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="Actions\ChangeDrawColor.cpp" />
     <ClCompile Include="Actions\ChangeFillColor.cpp" />
     <ClCompile Include="Actions\bringToFrontAction.cpp" />
+    <ClCompile Include="Actions\ResizeAction.cpp" />
     <ClCompile Include="Actions\selectShapeAction.cpp" />
     <ClCompile Include="CMUgraphicsLib\auxil.cpp" />
     <ClCompile Include="CMUgraphicsLib\CMUgraphics.cpp" />
@@ -210,6 +211,7 @@
     <ClInclude Include="Actions\ChangeDrawColor.h" />
     <ClInclude Include="Actions\ChangeFillColor.h" />
     <ClInclude Include="Actions\bringToFrontAction.h" />
+    <ClInclude Include="Actions\ResizeAction.h" />
     <ClInclude Include="CMUgraphicsLib\auxil.h" />
     <ClInclude Include="CMUgraphicsLib\CMUgraphics.h" />
     <ClInclude Include="CMUgraphicsLib\colors.h" />
