--- a/PT-Project.vcxproj
+++ b/PT-Project.vcxproj
@@ -128,19 +128,19 @@
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Actions\AddElpsAction.cpp" />
+    <ClCompile Include="Actions\AddEllipseAction.cpp" />
     <ClCompile Include="Actions\AddLineAction.cpp" />
-    <ClCompile Include="Actions\AddRhomAction.cpp" />
-    <ClCompile Include="Actions\AddTriAction.cpp" />
+    <ClCompile Include="Actions\AddRhombusAction.cpp" />
+    <ClCompile Include="Actions\AddTriangleAction.cpp" />
     <ClCompile Include="Actions\ByColorAction.cpp" />
     <ClCompile Include="Actions\ByShapeAction.cpp" />
     <ClCompile Include="Actions\ClearAction.cpp" />
     <ClCompile Include="Actions\ExitAction.cpp" />
     <ClCompile Include="Actions\ChangeDrawColor.cpp" />
     <ClCompile Include="Actions\ChangeFillColor.cpp" />
-    <ClCompile Include="Actions\bringToFrontAction.cpp" />
+    <ClCompile Include="Actions\BringToFrontAction.cpp" />
     <ClCompile Include="Actions\ResizeAction.cpp" />
-    <ClCompile Include="Actions\selectShapeAction.cpp" />
+    <ClCompile Include="Actions\SelectShapeAction.cpp" />
     <ClCompile Include="CMUgraphicsLib\auxil.cpp" />
     <ClCompile Include="CMUgraphicsLib\CMUgraphics.cpp" />
     <ClCompile Include="CMUgraphicsLib\colors.cpp" />
@@ -177,39 +177,39 @@
     <ClCompile Include="CMUgraphicsLib\jpeg\jquant1.c" />
     <ClCompile Include="CMUgraphicsLib\jpeg\jquant2.c" />
     <ClCompile Include="CMUgraphicsLib\jpeg\jutils.c" />
-    <ClCompile Include="Actions\copyAction.cpp" />
-    <ClCompile Include="Actions\cutAction.cpp" />
-    <ClCompile Include="Actions\deleteAction.cpp" />
+    <ClCompile Include="Actions\CopyAction.cpp" />
+    <ClCompile Include="Actions\CutAction.cpp" />
+    <ClCompile Include="Actions\DeleteAction.cpp" />
     <ClCompile Include="Figures\CEllipse.cpp" />
     <ClCompile Include="Figures\CFigure.cpp" />
     <ClCompile Include="Figures\CLine.cpp" />
     <ClCompile Include="Figures\CRectangle.cpp" />
-    <ClCompile Include="Actions\AddRectAction.cpp" />
+    <ClCompile Include="Actions\AddRectangleAction.cpp" />
     <ClCompile Include="Figures\CRhombus.cpp" />
     <ClCompile Include="Figures\CTriangle.cpp" />
     <ClCompile Include="GUI\Input.cpp" />
     <ClCompile Include="GUI\Output.cpp" />
     <ClCompile Include="ApplicationManager.cpp" />
-    <ClCompile Include="Actions\loadAction.cpp" />
+    <ClCompile Include="Actions\LoadAction.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Actions\pasteAction.cpp" />
-    <ClCompile Include="Actions\saveAction.cpp" />
-    <ClCompile Include="Actions\saveByTypeAction.cpp" />
-    <ClCompile Include="Actions\sendToBackAction.cpp" />
+    <ClCompile Include="Actions\PasteAction.cpp" />
+    <ClCompile Include="Actions\SaveAction.cpp" />
+    <ClCompile Include="Actions\SaveByTypeAction.cpp" />
+    <ClCompile Include="Actions\SendToBackAction.cpp" />
     <ClCompile Include="Utility.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Actions\AddElpsAction.h" />
+    <ClInclude Include="Actions\AddEllipseAction.h" />
     <ClInclude Include="Actions\AddLineAction.h" />
-    <ClInclude Include="Actions\AddRhomAction.h" />
-    <ClInclude Include="Actions\AddTriAction.h" />
+    <ClInclude Include="Actions\AddRhombusAction.h" />
+    <ClInclude Include="Actions\AddTriangleAction.h" />
     <ClInclude Include="Actions\ByColorAction.h" />
     <ClInclude Include="Actions\ByShapeAction.h" />
     <ClInclude Include="Actions\ExitAction.h" />
     <ClInclude Include="Actions\ClearAction.h" />
     <ClInclude Include="Actions\ChangeDrawColor.h" />
     <ClInclude Include="Actions\ChangeFillColor.h" />
-    <ClInclude Include="Actions\bringToFrontAction.h" />
+    <ClInclude Include="Actions\BringToFrontAction.h" />
     <ClInclude Include="Actions\ResizeAction.h" />
     <ClInclude Include="CMUgraphicsLib\auxil.h" />
     <ClInclude Include="CMUgraphicsLib\CMUgraphics.h" />
@@ -231,15 +231,15 @@
     <ClInclude Include="CMUgraphicsLib\jpeg\jpegint.h" />
     <ClInclude Include="CMUgraphicsLib\jpeg\jpeglib.h" />
     <ClInclude Include="CMUgraphicsLib\jpeg\jversion.h" />
-    <ClInclude Include="Actions\copyAction.h" />
-    <ClInclude Include="Actions\cutAction.h" />
-    <ClInclude Include="Actions\deleteAction.h" />
+    <ClInclude Include="Actions\CopyAction.h" />
+    <ClInclude Include="Actions\CutAction.h" />
+    <ClInclude Include="Actions\DeleteAction.h" />
     <ClInclude Include="Figures\CEllipse.h" />
     <ClInclude Include="Figures\CFigure.h" />
     <ClInclude Include="Figures\CLine.h" />
     <ClInclude Include="Figures\CRectangle.h" />
     <ClInclude Include="Actions\Action.h" />
-    <ClInclude Include="Actions\AddRectAction.h" />
+    <ClInclude Include="Actions\AddRectangleAction.h" />
     <ClInclude Include="Figures\CRhombus.h" />
     <ClInclude Include="Figures\CTriangle.h" />
     <ClInclude Include="GUI\Input.h" />
@@ -247,12 +247,12 @@
     <ClInclude Include="GUI\UI_Info.h" />
     <ClInclude Include="ApplicationManager.h" />
     <ClInclude Include="DEFS.h" />
-    <ClInclude Include="Actions\loadAction.h" />
-    <ClInclude Include="Actions\pasteAction.h" />
-    <ClInclude Include="Actions\saveAction.h" />
-    <ClInclude Include="Actions\saveByTypeAction.h" />
-    <ClInclude Include="Actions\selectShapeAction.h" />
-    <ClInclude Include="Actions\sendToBackAction.h" />
+    <ClInclude Include="Actions\LoadAction.h" />
+    <ClInclude Include="Actions\PasteAction.h" />
+    <ClInclude Include="Actions\SaveAction.h" />
+    <ClInclude Include="Actions\SaveByTypeAction.h" />
+    <ClInclude Include="Actions\SelectShapeAction.h" />
+    <ClInclude Include="Actions\SendToBackAction.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
