Added Class Color & some bug fixed & removed Repetition
Added Class Color and inherited from it all colors in the pallete in order to make the code cleaner , more scalable and shorter

--- a/PT-Project.vcxproj
+++ b/PT-Project.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="Actions\BringToFrontAction.cpp" />
     <ClCompile Include="Actions\ResizeAction.cpp" />
     <ClCompile Include="Actions\SelectShapeAction.cpp" />
+    <ClCompile Include="Colors\Black.cpp" />
     <ClCompile Include="CMUgraphicsLib\auxil.cpp" />
     <ClCompile Include="CMUgraphicsLib\CMUgraphics.cpp" />
     <ClCompile Include="CMUgraphicsLib\colors.cpp" />
@@ -181,6 +182,29 @@
     <ClCompile Include="Actions\CopyAction.cpp" />
     <ClCompile Include="Actions\CutAction.cpp" />
     <ClCompile Include="Actions\DeleteAction.cpp" />
+    <ClCompile Include="Colors\Blue.cpp" />
+    <ClCompile Include="Colors\Brown.cpp" />
+    <ClCompile Include="Colors\Color.cpp" />
+    <ClCompile Include="Colors\DarkBlue.cpp" />
+    <ClCompile Include="Colors\DarkBrown.cpp" />
+    <ClCompile Include="Colors\DarkGreen.cpp" />
+    <ClCompile Include="Colors\DarkGrey.cpp" />
+    <ClCompile Include="Colors\DarkOrange.cpp" />
+    <ClCompile Include="Colors\DarkPink.cpp" />
+    <ClCompile Include="Colors\DarkRed.cpp" />
+    <ClCompile Include="Colors\DarkTurquoise.cpp" />
+    <ClCompile Include="Colors\DarkViolet.cpp" />
+    <ClCompile Include="Colors\DarkYellow.cpp" />
+    <ClCompile Include="Colors\Green.cpp" />
+    <ClCompile Include="Colors\Grey.cpp" />
+    <ClCompile Include="Colors\NoFill.cpp" />
+    <ClCompile Include="Colors\Orange.cpp" />
+    <ClCompile Include="Colors\Pink.cpp" />
+    <ClCompile Include="Colors\Red.cpp" />
+    <ClCompile Include="Colors\Turquoise.cpp" />
+    <ClCompile Include="Colors\Violet.cpp" />
+    <ClCompile Include="Colors\White.cpp" />
+    <ClCompile Include="Colors\Yellow.cpp" />
     <ClCompile Include="Figures\CEllipse.cpp" />
     <ClCompile Include="Figures\CFigure.cpp" />
     <ClCompile Include="Figures\CLine.cpp" />
@@ -214,6 +238,7 @@
     <ClInclude Include="Actions\BringToFrontAction.h" />
     <ClInclude Include="Actions\ResizeAction.h" />
     <ClInclude Include="Actions\ChangeBorderSize.h" />
+    <ClInclude Include="Colors\Black.h" />
     <ClInclude Include="CMUgraphicsLib\auxil.h" />
     <ClInclude Include="CMUgraphicsLib\CMUgraphics.h" />
     <ClInclude Include="CMUgraphicsLib\colors.h" />
@@ -237,6 +262,30 @@
     <ClInclude Include="Actions\CopyAction.h" />
     <ClInclude Include="Actions\CutAction.h" />
     <ClInclude Include="Actions\DeleteAction.h" />
+    <ClInclude Include="Colors\Blue.h" />
+    <ClInclude Include="Colors\Brown.h" />
+    <ClInclude Include="Colors\Color.h" />
+    <ClInclude Include="Colors\ColorsHeader.h" />
+    <ClInclude Include="Colors\DarkBlue.h" />
+    <ClInclude Include="Colors\DarkBrown.h" />
+    <ClInclude Include="Colors\DarkGreen.h" />
+    <ClInclude Include="Colors\DarkGrey.h" />
+    <ClInclude Include="Colors\DarkOrange.h" />
+    <ClInclude Include="Colors\DarkPink.h" />
+    <ClInclude Include="Colors\DarkRed.h" />
+    <ClInclude Include="Colors\DarkTurquoise.h" />
+    <ClInclude Include="Colors\DarkViolet.h" />
+    <ClInclude Include="Colors\DarkYellow.h" />
+    <ClInclude Include="Colors\Green.h" />
+    <ClInclude Include="Colors\Grey.h" />
+    <ClInclude Include="Colors\NoFill.h" />
+    <ClInclude Include="Colors\Orange.h" />
+    <ClInclude Include="Colors\Pink.h" />
+    <ClInclude Include="Colors\Red.h" />
+    <ClInclude Include="Colors\Turquoise.h" />
+    <ClInclude Include="Colors\Violet.h" />
+    <ClInclude Include="Colors\White.h" />
+    <ClInclude Include="Colors\Yellow.h" />
     <ClInclude Include="Figures\CEllipse.h" />
     <ClInclude Include="Figures\CFigure.h" />
     <ClInclude Include="Figures\CLine.h" />
